[tool.poetry]
name = "pheval_exomiser"
version = "0.2.5"
description = ""
authors = ["Yasemin Bridges <y.bridges@qmul.ac.uk>",
    "Julius Jacobsen <j.jacobsen@qmul.ac.uk>",
    "Nico Matentzoglu <nicolas.matentzoglu@gmail.com>",
    "Vinícius de Souza <souzadevinicius@gmail.com>"]
readme = "README.md"
packages = [{ include = "pheval_exomiser", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
click = "^8.1.3"
pandas = "^1.5.2"
phenopackets = "^2.0.2"
google = "^3.0.0"
pyaml = "^21.10.1"
oaklib = "^0.5.12"
docker = "^6.0.1"
pydantic = "^1.10.7"
pheval = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.15.6"
pycodestyle = "^2.10.0"
coverage = "^6.5.0"


[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.poetry.scripts]
pheval-exomiser = "pheval_exomiser.cli:main"

[tool.poetry.plugins."pheval.plugins"]
exomiser = "pheval_exomiser.runner:ExomiserPhEvalRunner"

[tool.black]
line-length = 100
target-version = ["py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
